Atualização e manipulação do arquivos DOM

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div id="placar">
         <div id="jogador">
-            <h2 id="jogador-nome">Thiago</h2>
+            <h2 id="jogador-nome">Jogador</h2>
             <span id="jogador-pontos">0</span>
             <ul id="jogador-escolha">
                 <li><a id="jogador-escolha1"><img src="img/pedra.png" alt=""></a></li>
@@ -33,7 +33,7 @@
             </ul>
         </div>
     </div>
-    <div id="mensagem">mensagem</div>
+    <div id="mensagem">Mensagens</div>
     <script src="js.js"></script>
 </body>
 </html>
